fix: preserve reconciliation summary and audit tx contracts